--- a/EngineSigma.Editor/MainWindow.xaml
+++ b/EngineSigma.Editor/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModel="clr-namespace:EngineSigma.Editor.MVVM.ViewModel"
         mc:Ignorable="d"
         WindowStyle="None"
         Background="Transparent"
@@ -11,7 +12,11 @@
         WindowStartupLocation="CenterScreen"
         Title="EngineSigma" Height="600" Width="920">
         
-    <DockPanel>
+        <Window.DataContext>
+                <viewModel:MainViewModel/>
+        </Window.DataContext>
+        
+        <DockPanel>
         
         <Border Height="28"
                 Background="#050621"
@@ -25,7 +30,7 @@
                                 <ColumnDefinition Width="100"/>
                         </Grid.ColumnDefinitions>
                         
-                        <TextBlock Text="Sigma Hub 6.6.6"
+                        <TextBlock Text="Sigma Hub 1.0.0"
                                    Foreground="White"
                                    FontFamily="Fonts/#Raleway Thin"
                                    VerticalAlignment="Center"
@@ -76,14 +81,17 @@
                                              Foreground="White"
                                              FontSize="20"
                                              Height="50"
-                                             Margin="0,5,0,0"/>
+                                             Margin="0,5,0,0"
+                                             IsChecked="True"
+                                             Command="{Binding HomeViewCommand}"/>
                                 
                                 <RadioButton Style="{StaticResource MenuButtonTheme}"
                                              Content="Projects"
                                              Foreground="White"
                                              FontSize="20"
                                              Height="50"
-                                             Margin="0,10,0,0"/>
+                                             Margin="0,10,0,0"
+                                             Command="{Binding ProjectsViewCommand}"/>
                                 
                                 <RadioButton Style="{StaticResource MenuButtonTheme}"
                                              Content="Features"
@@ -108,6 +116,10 @@
                                  HorizontalAlignment="Center"
                                  Margin="0,5,150,5"
                                  Style="{StaticResource SearchBarTheme}"/>
+                        
+                        <ContentControl Grid.Row="1" Grid.Column="1"
+                                        Margin="10"
+                                        Content="{Binding CurrentView}"/>
                 </Grid>
         </Border>
         
