--- a/EngineSigma.Editor/App.xaml
+++ b/EngineSigma.Editor/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/SearchBarTheme.xaml"/>
                 <ResourceDictionary Source="Theme/CloseButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ProjectListTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
@@ -22,6 +23,14 @@
             
             <DataTemplate DataType="{x:Type viewModel:ProjectsViewModel}">
                 <view:ProjectsView/>
+            </DataTemplate>
+            
+            <DataTemplate DataType="{x:Type viewModel:FeaturesViewModel}">
+                <view:FeaturesView/>
+            </DataTemplate>
+            
+            <DataTemplate DataType="{x:Type viewModel:AboutUsViewModel}">
+                <view:AboutUsView/>
             </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
