--- a/EngineSigma.Editor/MVVM/View/ProjectsView.xaml
+++ b/EngineSigma.Editor/MVVM/View/ProjectsView.xaml
@@ -5,8 +5,32 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:EngineSigma.Editor.MVVM.View"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <TextBlock Text="a" FontSize="50"></TextBlock>
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="Transparent">
+
+    <StackPanel Orientation="Horizontal">
+        
+        <ListView ItemsSource="{Binding ProjectsList}"
+                  Width="450"
+                  Height="350"
+                  Margin="10,10,5,0"
+                  Background="#252525"
+                  BorderThickness="0"
+                  ScrollViewer.CanContentScroll="False"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"/>
+        
+        <Button Content="Open" 
+                Height="20" 
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top"
+                Margin="0,10,0,0"/>
+        
+        <Button Content="Create new project" 
+                Height="20" 
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top"
+                Margin="10,10,0,0"/>
+    </StackPanel>
+    
 </UserControl>
