--- a/EngineSigma.Editor/Theme/SearchBarTheme.xaml
+++ b/EngineSigma.Editor/Theme/SearchBarTheme.xaml
@@ -11,7 +11,7 @@
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     
                     <Border CornerRadius="10"
-                            Background="#1d2545"
+                            Background="DimGray"
                             Width="300"
                             Height="45">
                         
