--- a/EngineSigma.Editor/Theme/SearchBarTheme.xaml
+++ b/EngineSigma.Editor/Theme/SearchBarTheme.xaml
@@ -25,6 +25,7 @@
                                      VerticalAlignment="Center"
                                      Padding="5"
                                      Foreground="White"
+                                     FontFamily="/Fonts/#Ubuntu Medium"
                                      FontSize="15"
                                      x:Name="SearchBar"/>
                             
@@ -34,6 +35,7 @@
                                        HorizontalAlignment="Left"
                                        Margin="20,0,0,0"
                                        FontSize="15"
+                                       FontFamily="/Fonts/#Ubuntu Medium"
                                        Foreground="White"
                                        Grid.Column="1">
                                 
