--- a/EngineSigma.Editor/App.xaml
+++ b/EngineSigma.Editor/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Theme/SearchBarTheme.xaml"/>
                 <ResourceDictionary Source="Theme/CloseButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/ProjectListTheme.xaml"/>
+                <ResourceDictionary Source="Theme/AboutUsBorderTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
@@ -32,6 +33,7 @@
             <DataTemplate DataType="{x:Type viewModel:AboutUsViewModel}">
                 <view:AboutUsView/>
             </DataTemplate>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
